Hot fix for z-index on stops

--- a/linenumberone.css
+++ b/linenumberone.css
@@ -72,7 +72,7 @@
   height: 100px;
   background-color: rgba(0, 255, 0, 0);
   position: absolute;
-  z-index: 1 !important;
+  z-index: 4 !important;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
